--- a/package.json
+++ b/package.json
@@ -16,6 +16,8 @@
     "eslint": "^4.19.1",
     "hyperscript": "^2.0.2",
     "hyperscript-helpers": "^3.0.3",
+    "ramda": "^0.25.0",
+    "tachyons": "^4.9.1",
     "webpack": "^3.10.0",
     "webpack-dev-server": "^2.9.4"
   },
