--- a/package.json
+++ b/package.json
@@ -14,8 +14,8 @@
     "babel-plugin-transform-object-rest-spread": "^6.26.0",
     "babel-preset-env": "^1.7.0",
     "eslint": "^4.19.1",
-    "hyperscript": "^2.0.2",
     "hyperscript-helpers": "^3.0.3",
+    "virtual-dom": "^2.1.1",
     "webpack": "^3.10.0",
     "webpack-dev-server": "^2.9.4"
   },
